Import of BARBIE/WWW-UsePerl-Journal-Thread-0.02 from CPAN.
gitpan-cpan-distribution: WWW-UsePerl-Journal-Thread
gitpan-cpan-version:      0.02
gitpan-cpan-path:         BARBIE/WWW-UsePerl-Journal-Thread-0.02.tar.gz
gitpan-cpan-author:       BARBIE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension WWW::UsePerl::Journal::Thread.
 
+0.02  Thu Aug 14 12:23:02 GMTDT 2003
+	- POD updates and fixes  
+
 0.01  Wed Aug 13 09:26:53 GMTDT 2003
 	- original version; based upon WWW::UsePerl::Journal 
