Import of BARBIE/WWW-UsePerl-Journal-Thread-0.04 from CPAN.
gitpan-cpan-distribution: WWW-UsePerl-Journal-Thread
gitpan-cpan-version:      0.04
gitpan-cpan-path:         BARBIE/WWW-UsePerl-Journal-Thread-0.04.tar.gz
gitpan-cpan-author:       BARBIE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension WWW::UsePerl::Journal::Thread.
 
+0.04  10/11/2003
+	- Updated Test::Pod requirement
+	- Between releases a few comments seem to have
+	  gone back an hour on use.perl!!!
+
 0.03  Wed Oct  8 13:04:18 GMTDT 2003
 	- META.yml added to distribution
 	- POD updates
